styles/mixins.scss
@use '/styles/constants';

@mixin basicBorder {
  border: constants.$borderSize solid constants.$borderDarkGray
}

@mixin imageButton {
  border: none;
  padding: 0;
  cursor: pointer;
  background: none;
}

@mixin basicButton {
  @include basicBorder;
  background-color: constants.$darkGray;
  cursor: pointer;

  &:hover, &:focus {
    background-color: constants.$lightGrey
  }

  &:active {
    background-color: constants.$borderDarkGray;
  }
}

@mixin defaultLinkStyles {
  text-decoration: underline;
  &:hover, &:focus {
    color: darken(constants.$textWhite, 15);
  }
}

@mixin mediumGreyPanel {
  border: constants.$borderSize solid constants.$borderDarkGray;
  background-color: constants.$mediumGrey;
  padding: 10px;
  margin: 10px 0;

  p {
    text-align: center;
  }
}

